test/nl/formats/liberty/benchmarks/errors/bundle_direction_members_mismatch_error.lib
library (example) {
  cell ("cell_def") {
    bundle (D) {
      direction : input;
      members (D0, D1);
      pin (D0) {
      }
    }
  }
}
